Change in Dockerfile, and make changes in URL for internal docker network

--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ li{
 }
 
 .message.self{
-    background-color: white;
-    color: blue;
+    background-color: #c5c4c4;
+    color: black;
     text-align: right;
 }
