Tried to remove submodules

--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,15 @@ li{
 .text-blue{
     color: #072057;
 }
+
+.card{
+    transition: all 0.3s ease;
+}
+.card:hover{
+    box-shadow: 0 4px 8px rgba(0,0,0,0.5);
+    transform: scale(1.05);
+}
+
+.card:active,.card:hover:active{
+    transform: scale(1);
+}
